# ultimate-ppt-master-skill

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  INSTALL.md  LICENSE  PROMPT.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  UPSTREAM_SYNC.md  package.json  requirements.txt
.github/: pull_request_template.md
Casks/: ultimate-ppt-master.rb
agents/: marketplace-listing.json  openai.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: desktop_worker.py
apps/desktop/src-tauri/src/: lib.rs  main.rs
contracts/: README.md  route-policy.yaml  visual-defaults.yaml  workflow-policy.yaml
docs/: README.md  agent-connect-bridge.md  agent-setup.md  choosing-a-workflow.md  completion-audit-v2.5-quality-workbench.md  github-tech-scan-2026-05.md  homebrew-distribution.md  model-provider-setup.md  next-optimization-directions.md  next-roadmap.md  product-positioning.md  public-growth-playbook.md  quality-workbench-v2.5.md  quickstart-desktop.md  release-maintenance.md  release-notes-v2.3.0.md  release-notes-v2.3.3.md  release-notes-v2.3.4.md  release-notes-v2.4.0.md  release-notes-v2.5.0.md  release-notes-v3.0.0.md  skill-market-distribution.md  troubleshooting.md  upstream-benchmark-2026-05.md  web-experience.md
references/: executor-base.md  image-base.md  image-generator.md  image-layout-spec.md  image-searcher.md  strategist.md  (+2 more)
(+326 files in other folders)
